--- a/spring-security-survey/pom.xml
+++ b/spring-security-survey/pom.xml
@@ -31,6 +31,21 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		
+		<dependency>
+		
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			
+			<version>0.2</version>
+			
+		</dependency>
+		
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			
+		</dependency>
 
 		<dependency>
 			<groupId>mysql</groupId>
